fixed the projects alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,12 +105,13 @@ footer {
     align-items: center;
 }
 .container {
-    width: 50%;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     cursor: pointer;
     padding: 30px;
+    margin: 30px;
 }
 
 .card {
